    Orthodox Cross, Wheel of Dharma, Taurus, Cancer, Leo, Aquarius, Pisces, Ophiuchus
  * contour in Cat
  * contour in Victory Hand
  * redesign llama
  * structure in Classical Building
  * coat of arms in Flag: Portugal
  * tongue in Hot Face
  * national emblem in Flag: Afghanistan 
  * drool in Drooling Face
  * cross in Cross Mark

--------------------------------------------------------------------------------

🦠 OpenMoji 12.2 - 17 March 2020

Many improvements, fixes and new OpenMojis:
👉 First batch of Emoji 13, ca. 1/3 of all new ones
👉 Unicode Emoji 12.1 complete, new gender neutral persons and person-roles
👉 New extras-openmoji: healthcare
👉 New extras-openmoji: climate-environment

New:
+ Emoji 13:
  1FAC0 anatomical heart, 1FAC1 lungs, 1FAC2 people hugging,
  1F3F3 FE0F 200D 26A7 FE0F transgender flag, 1F43B polar bear,
  1FAD0 blueberries, 1FAD3 flatbread, 1FAD4 tamale, 1FA85 piñata,
  1FA98 long drum, 1F972 smiling face with tear, 1F978 disguised face,
  1F6FB pickup truck, 1FAB0 fly, 1FAB1 worm, 1FAD2 olive, 1FA84 magic wand,
  1F6FC roller skate, 1FA86 nesting dolls, 1FA74 thong sandal, 1FAA5 toothbrush,
  26A7 transgender symbol, 1F408 black cat
  by Liz Bravo @lizbravob and @carlinmack
+ Gender neutral persons and person-roles to fulfil Unicode Emoji 12.1:
  1F9D1-200D-1F9B0, 1F9D1-200D-1F9B1, 1F9D1-200D-1F9B3, 1F9D1-200D-1F9B2,
  1F9D1-200D-2695-FE0F, 1F9D1-200D-1F393, 1F9D1-200D-1F3EB, 1F9D1-200D-2696-FE0F,
  1F9D1-200D-1F33E, 1F9D1-200D-1F373, 1F9D1-200D-1F527, 1F9D1-200D-1F3ED,
  1F9D1-200D-1F4BC, 1F9D1-200D-1F52C, 1F9D1-200D-1F4BB, 1F9D1-200D-1F3A4,
  1F9D1-200D-1F3A8, 1F9D1-200D-2708-FE0F, 1F9D1-200D-1F680, 1F9D1-200D-1F692,
  1F9D1-200D-1F9AF, 1F9D1-200D-1F9BC, 1F9D1-200D-1F9BD
+ New extras-openmoji/healthcare emojis (41):
  E30A, E30B, E30C, E30D, E30E, E30F, E31A, E31B, E31C, E31D, E31E, E31F, E32B,
  E300, E301, E302, E303, E304, E305, E306, E307, E308, E309, E310, E311, E312,