@@ -600,8 +600,8 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 ♂️,2642,"man, sign, gender",Hilda Kalyoncu,2018-04-18
 ⚧️,26A7,"LGBT, trans, queer, gender",Carlin MacKenzie,2020-03-12
 ✅,2705,"check, mark, white, right",Hilda Kalyoncu,2018-04-18
-❓️,2753,"question, punctation",Hilda Kalyoncu,2018-04-18
-❔,2754,"punctation, mark, question, white",Hilda Kalyoncu,2018-04-18
+❓️,2753,"question, punctation",Selina Lange,2019-05-06
+❔,2754,"punctation, mark, question, white",Selina Lange,2019-05-06
 ❕,2755,"exclamation, mark, punctation, white",Hilda Kalyoncu,2018-04-18
 ❗️,2757,"exclamation, mark, punctation",Hilda Kalyoncu,2018-04-18
 ➕,2795,"math, plus, sign",Hilda Kalyoncu,2018-04-18
