@@ -48083,8 +48083,8 @@
     "annotation": "question mark",
     "tags": "?, mark, punctuation, question",
     "openmoji_tags": "question, punctation",
-    "openmoji_author": "Hilda Kalyoncu",
-    "openmoji_date": "2018-04-18",
+    "openmoji_author": "Selina Lange",
+    "openmoji_date": "2019-05-06",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
@@ -48100,8 +48100,8 @@
     "annotation": "white question mark",
     "tags": "?, mark, outlined, punctuation, question",
     "openmoji_tags": "punctation, mark, question, white",
-    "openmoji_author": "Hilda Kalyoncu",
-    "openmoji_date": "2018-04-18",
+    "openmoji_author": "Selina Lange",
+    "openmoji_date": "2019-05-06",
     "skintone": "",
     "skintone_combination": "",
     "skintone_base_emoji": "",
